--- a/docs-astro/src/pages/index.astro
+++ b/docs-astro/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Base from '../layouts/Base.astro';
 import Navbar from '../components/Navbar.astro';
 import Hero from '../components/Hero.astro';
+import Philosophy from '../components/Philosophy.astro';
 import Features from '../components/Features.astro';
 import Demo from '../components/Demo.astro';
 import Commands from '../components/Commands.astro';
@@ -13,6 +14,7 @@ import Footer from '../components/Footer.astro';
   <Navbar />
   <main>
     <Hero />
+    <Philosophy />
     <Features />
     <Demo />
     <Commands />
